--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "tower-of-hanoi",
   "version": "1.0.0",
   "description": "tower of hanoi game",
-  "main": "scripts/main.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "tsc",
+    "dev:start": "npm-run-all build start",
+    "start": "node ./server.js",
+    "dev": "nodemon --watch ./ -e ts,json,html,js --exec npm run dev:start"
   },
   "repository": {
     "type": "git",
@@ -24,6 +28,14 @@
   },
   "homepage": "https://github.com/icepick4/tower-of-hanoi#readme",
   "dependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.6.4"
+  },
+  "nodemonConfig":{
+    "ignore": [
+      "public/js/*.js"
+    ]
   }
 }
