--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build" : "tsc",
-    "dev:start": "npm-run-all build start",
+    "dev:start": "npm run build && npm run start",
     "start": "node ./server.js",
     "dev": "nodemon --watch ./ -e ts,json,html,js --exec npm run dev:start"
   },
@@ -30,7 +30,6 @@
   "dependencies": {
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
-    "npm-run-all": "^4.1.5",
     "typescript": "^4.6.4"
   },
   "nodemonConfig":{
