--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "tsc",
+    "build": "tsc",
     "dev:start": "npm run build && npm run start",
     "start": "node ./server.js",
-    "dev": "nodemon --watch ./ -e ts,json,html,js --exec npm run dev:start"
+    "dev": "nodemon --watch ./ -e ts,json,js --exec npm run dev:start"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
     "nodemon": "^2.0.16",
     "typescript": "^4.6.4"
   },
-  "nodemonConfig":{
+  "nodemonConfig": {
     "ignore": [
       "public/js/*.js"
     ]
