--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "tower-of-hanoi",
-  "version": "1.0.0",
-  "description": "tower of hanoi game",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "dev:start": "npm run build && npm run start",
-    "start": "node ./server.js",
-    "dev": "nodemon --watch ./ -e ts,json,js --exec npm run dev:start"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/icepick4/tower-of-hanoi.git"
-  },
-  "keywords": [
-    "hanoi",
-    "tower",
-    "game",
-    "js",
-    "monkey"
-  ],
-  "author": "Rémi JARA",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/icepick4/tower-of-hanoi/issues"
-  },
-  "homepage": "https://github.com/icepick4/tower-of-hanoi#readme",
-  "dependencies": {
-    "express": "^4.18.1",
-    "nodemon": "^2.0.16",
-    "typescript": "^4.6.4"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "public/js/*.js"
-    ]
-  }
+    "name": "tower-of-hanoi",
+    "version": "1.0.0",
+    "description": "tower of hanoi game",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc",
+        "dev:start": "npm run build && npm run start",
+        "start": "node ./server.js",
+        "dev": "nodemon --watch ./ -e ts,json,js --exec npm run dev:start"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/icepick4/tower-of-hanoi.git"
+    },
+    "keywords": [
+        "hanoi",
+        "tower",
+        "game",
+        "js",
+        "monkey"
+    ],
+    "author": "Rémi JARA",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/icepick4/tower-of-hanoi/issues"
+    },
+    "homepage": "https://github.com/icepick4/tower-of-hanoi#readme",
+    "dependencies": {
+        "express": "^4.18.1",
+        "nodemon": "^2.0.16",
+        "typescript": "^4.6.4"
+    },
+    "nodemonConfig": {
+        "ignore": [
+            "drag-and-drop/public/js/*.js"
+        ]
+    }
 }
