--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc",
+        "build": "webpack",
         "dev:start": "npm run build && npm run start",
         "start": "node ./server.js",
         "dev": "nodemon --watch ./ -e ts,json,js --exec npm run dev:start"
@@ -30,11 +30,18 @@
     "dependencies": {
         "express": "^4.18.1",
         "nodemon": "^2.0.16",
+        "three": "^0.141.0",
+        "ts-loader": "^9.3.0",
         "typescript": "^4.6.4"
     },
     "nodemonConfig": {
         "ignore": [
             "public/js/*.js"
         ]
+    },
+    "devDependencies": {
+        "@types/three": "^0.140.0",
+        "webpack": "^5.72.1",
+        "webpack-cli": "^4.9.2"
     }
 }
