hover underline on buttons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -90,5 +90,7 @@
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
-    "exclude": ["./threejs", "./2d/click-to-select"]
+    "exclude": [
+        "./2d"
+    ]
 }
