--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "webpack",
         "dev:start": "npm run build && npm run start",
         "start": "node ./server.js",
-        "dev": "nodemon --watch ./ -e ts,json,js --exec npm run dev:start"
+        "dev": "nodemon --watch ./ -e ts,json,js --exec npm run dev:start",
+        "lint": "eslint . --ext .ts"
     },
     "repository": {
         "type": "git",
@@ -41,6 +42,9 @@
     },
     "devDependencies": {
         "@types/three": "^0.140.0",
+        "@typescript-eslint/eslint-plugin": "^5.27.0",
+        "@typescript-eslint/parser": "^5.27.0",
+        "eslint": "^8.17.0",
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2"
     }
