--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -4,23 +4,14 @@
 # You can adjust the behavior by modifying this file.
 # For more information, see:
 # https://github.com/github/super-linter
-name: Lint Code Base
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+name: Lint
+
+on: [push]
+
 jobs:
-  run-lint:
+  eslint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
-          
-
-      - name: Run ESLint
-        uses: stefanoeb/eslint-action@1.0.2
+      - uses: actions/checkout@v1
+      - uses: stefanoeb/eslint-action@1.0.2
