--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dev:start": "npm run build && npm run start",
         "start": "node ./server.js",
         "dev": "nodemon --watch ./ -e ts,json,js --exec npm run dev:start",
-        "lint": "eslint . --ext .ts"
+        "lint:js": "eslint src/**/*.ts",
+        "lint": "npm run lint:js"
     },
     "repository": {
         "type": "git",
