--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -7,8 +7,9 @@
 name: Lint # name of the action (displayed in the github interface)
 
 on: # event list
-pull_request: # on a pull request to each of these branches
-branches: ["main"]
+  push: # on a pull request to each of these branches
+    branches: 
+    - main
 
 env: # environment variables (available in any part of the action)
   NODE_VERSION: 16
